--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Mr Ortega
 description: Doing some python
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://ww2.rspb.org.uk/community/cfs-file.ashx/__key/communityserver-blogs-components-weblogfiles/00-00-05-27-10/robin3.jpg
 
 #
 # Flags below are optional
